--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": false,
   "description": "Simple yet powerful absence management software for small and medium size business",
   "engines": {
-    "node": ">=13.0.0"
+    "node": ">=20.0.0"
   },
   "dependencies": {
     "bluebird": "^2.10.2",
@@ -38,7 +38,7 @@
     "sequelize": "^3.19.2",
     "sequelize-cli": "2.5.1",
     "serve-favicon": "^2.1.7",
-    "sqlite3": "^4.0.1",
+    "sqlite3": "^5.0.0",
     "underscore": "^1.8.3",
     "uuid": "^3.3.2",
     "validator": "^3.43.0"
@@ -46,7 +46,7 @@
   "devDependencies": {
     "chai": "^2.2.0",
     "mocha": "^6.2.2",
-    "node-sass": "^4.5.3",
+    "sass": "^1.0.0",
     "request-promise": "^4.2.2",
     "selenium-webdriver": "2.53.3"
   },
